--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         }
 
-        .wrap>a {
+        #a_1 {
             width: 300px;
             height: 50px;
 
@@ -93,13 +93,13 @@
             box-shadow: 3px 3px 5px 0px black;
         }
 
-        .wrap>a:hover {
+        #a_1:hover {
             background-color: #f2f2f2;
 
 
         }
 
-        .wrap>b {
+        #a_2 {
             width: 300px;
             height: 50px;
 
@@ -122,13 +122,13 @@
             box-shadow: 3px 3px 5px 0px black;
         }
 
-        .wrap>b:hover {
+        #a_2:hover {
             background-color: #f2f2f2;
 
 
         }
 
-        .wrap>c {
+        #a_3 {
             width: 300px;
             height: 50px;
 
@@ -151,7 +151,7 @@
             box-shadow: 3px 3px 5px 0px black;
         }
 
-        .wrap>c:hover {
+        #a_3:hover {
             background-color: #f2f2f2;
 
 
@@ -203,10 +203,10 @@
 
 
 
-        <a target="_blank1" href="https://m.cafe.naver.com/ca-fe/aurmdiscussion">아우름 네이버 카페 바로가기</a>
-        <b target="_blank2" href="https://m.cafe.naver.com/ca-fe/web/cafes/28232931/articles/276?fromList=true">아우름 지원서
+        <a id="a_1" target="_blank1" href="https://m.cafe.naver.com/ca-fe/aurmdiscussion">아우름 네이버 카페 바로가기</a>
+        <b id="a_2" target="_blank2" href="https://m.cafe.naver.com/ca-fe/web/cafes/28232931/articles/276?fromList=true">아우름 지원서
             바로가기</b>
-        <c target="_blank3" href="https://www.instagram.com/aurm_official/">아우름 공식 인스타그램</c>
+        <c id="a_3" target="_blank3" href="https://www.instagram.com/aurm_official/">아우름 공식 인스타그램</c>
     </div>
 </body>
 
